# ChangeLog for app-backup/bacula
# Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-backup/bacula/ChangeLog,v 1.41 2007/10/14 18:13:48 wschlich Exp $

*bacula-2.2.5-r1 (14 Oct 2007)

  14 Oct 2007; Wolfram Schlich <wschlich@gentoo.org>
  +files/2.2.5/fix-nextvol.patch, +bacula-2.2.5-r1.ebuild:
  fix bug #195794

  13 Oct 2007; Jeroen Roovers <jer@gentoo.org> bacula-2.2.5.ebuild:
  Fix quoting issues found by repoman.

*bacula-2.2.5 (12 Oct 2007)

  12 Oct 2007; Wolfram Schlich <wschlich@gentoo.org>
  +files/2.2.5/bacula-all-conf, +files/2.2.5/bacula-all-init,
  +files/2.2.5/bacula-default-configs.patch, +files/2.2.5/bacula-dir-conf,
  +files/2.2.5/bacula-dir-init, +files/2.2.5/bacula-fd-conf,
  +files/2.2.5/bacula-fd-init, +files/2.2.5/bacula-gnomesu2gksu.diff,
  +files/2.2.5/bacula-sd-conf, +files/2.2.5/bacula-sd-init,
  +bacula-2.2.5.ebuild:
  version bump

*bacula-2.2.4 (10 Oct 2007)

  10 Oct 2007; Wolfram Schlich <wschlich@gentoo.org>
  +files/2.2.4/bacula-all-conf, +files/2.2.4/bacula-all-init,
  +files/2.2.4/bacula-default-configs.patch, +files/2.2.4/bacula-dir-conf,
  +files/2.2.4/bacula-dir-init, +files/2.2.4/bacula-fd-conf,
  +files/2.2.4/bacula-fd-init, +files/2.2.4/bacula-gnomesu2gksu.diff,
  +files/2.2.4/bacula-sd-conf, +files/2.2.4/bacula-sd-init,
  +bacula-2.2.4.ebuild:
  version bump

  21 Aug 2007; Ferris McCormick <fmccor@gentoo.org> bacula-2.0.3.ebuild:
  Sparc stable --- Bug #153189 --- (requires ghostscript upgrade for USE=doc:
    Bug #187280).

  21 Aug 2007; Jeroen Roovers <jer@gentoo.org> bacula-2.0.3.ebuild:
  Stable for HPPA (bug #153189).

  04 Aug 2007; Tobias Scherbaum <dertobi123@gentoo.org> bacula-2.0.3.ebuild:
  ppc stable, bug #153189

  03 Aug 2007; Christian Faulhammer <opfer@gentoo.org> bacula-2.0.3.ebuild:
  stable x86, bug 153189

  29 Apr 2007; Ryan Hill <dirtyepic@gentoo.org> bacula-2.0.3.ebuild:
  Fix wxGTK dep for bug #164139
