@@ -1,6 +1,6 @@
 # Copyright 1999-2007 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/x11-libs/qwt/Attic/qwt-5.0.2-r1.ebuild,v 1.1 2007/08/23 13:01:00 caleb Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-libs/qwt/Attic/qwt-5.0.2-r1.ebuild,v 1.2 2007/10/14 23:12:36 jer Exp $
 
 inherit multilib qt4
 
@@ -8,7 +8,7 @@ SRC_URI="mirror://sourceforge/qwt/${P}.tar.bz2"
 HOMEPAGE="http://qwt.sourceforge.net/"
 DESCRIPTION="2D plotting library for Qt4"
 LICENSE="qwt"
-KEYWORDS="~amd64 ~x86"
+KEYWORDS="~amd64 ~hppa ~x86"
 SLOT="5"
 IUSE="doc svg"
 
